#24146 Fix Integration test runs and crossover between tests (#24151)
* #24146 Fix Integration test runs and crossover between tests

Add Awaitability to replace Thread.sleep for test polling
fixing testRemoveContentFromIndexMultilingualContent
Fix test_content_type_reindex test handle duplicate entries
make LocalTransaction consistent with commit listeners
use commit listener for index unpause
fix indexer pausing early
fix session connection closing
fix reset of DEFAULT_CONTENT_TO_DEFAULT_LANGUAGE
handle exception and close transaction
ensure startup tasks always run in transaction
Add temp config override tracking
fix testBundlerHandler_UnpublishHost_Success
Turn off AUTO_ASSIGN_WORKFLOW for integration tests as it breaks after transaction fixes Test_Get_Bulk_Actions_For_Contentlet_Ids
await index queue empty
Initialize Integration Tests in Runner
fix CaffineCache over logging
create single log file for cicd
update log file size to see all log
fix SAVE_CONTENTLET_AS_JSON not being reset
ServerAPIImplTest leaves extra enabled index servers after
Fix leftover index entries
Missing DELETE_SITE SystemEventType called from ESContentletAPIImpi.deleteContetlet
duplicate key due to time resolution in test_save_and_delete_pushed_assets_on_two_env
Fix test_that_live_and_working_content_makes_it_into_the_index

* Add to loops to remove chance of random failure due to statistics.

* code review changes